docs/envoy/v1.16.0/_sources/api-v3/config/common/matcher/v3/matcher.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/common/matcher/v3/matcher.proto:

Unified Matcher API
===================


.. _envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate:

config.common.matcher.v3.MatchPredicate
---------------------------------------

`[config.common.matcher.v3.MatchPredicate proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/config/common/matcher/v3/matcher.proto#L21>`_

Match configuration. This is a recursive structure which allows complex nested match
configurations to be built using various logical operators.

.. code-block:: json

  {
    "or_match": "{...}",
    "and_match": "{...}",
    "not_match": "{...}",
    "any_match": "...",
    "http_request_headers_match": "{...}",
    "http_request_trailers_match": "{...}",
    "http_response_headers_match": "{...}",
    "http_response_trailers_match": "{...}",
    "http_request_generic_body_match": "{...}",
    "http_response_generic_body_match": "{...}"
  }

.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match:

or_match
  (:ref:`config.common.matcher.v3.MatchPredicate.MatchSet <envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate.MatchSet>`) A set that describes a logical OR. If any member of the set matches, the match configuration
  matches.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match:

and_match
  (:ref:`config.common.matcher.v3.MatchPredicate.MatchSet <envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate.MatchSet>`) A set that describes a logical AND. If all members of the set match, the match configuration
  matches.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match:

not_match
  (:ref:`config.common.matcher.v3.MatchPredicate <envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate>`) A negation match. The match configuration will match if the negated match condition matches.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match:

any_match
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The match configuration will always match.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match:

http_request_headers_match
  (:ref:`config.common.matcher.v3.HttpHeadersMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpHeadersMatch>`) HTTP request headers match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match:

http_request_trailers_match
  (:ref:`config.common.matcher.v3.HttpHeadersMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpHeadersMatch>`) HTTP request trailers match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match:

http_response_headers_match
  (:ref:`config.common.matcher.v3.HttpHeadersMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpHeadersMatch>`) HTTP response headers match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match:

http_response_trailers_match
  (:ref:`config.common.matcher.v3.HttpHeadersMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpHeadersMatch>`) HTTP response trailers match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match:

http_request_generic_body_match
  (:ref:`config.common.matcher.v3.HttpGenericBodyMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpGenericBodyMatch>`) HTTP request generic body match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match:

http_response_generic_body_match
  (:ref:`config.common.matcher.v3.HttpGenericBodyMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpGenericBodyMatch>`) HTTP response generic body match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate.MatchSet:

config.common.matcher.v3.MatchPredicate.MatchSet
------------------------------------------------

`[config.common.matcher.v3.MatchPredicate.MatchSet proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/config/common/matcher/v3/matcher.proto#L23>`_

A set of match configurations used for logical operations.

.. code-block:: json

  {
    "rules": []
  }

.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.MatchSet.rules:

rules
  (:ref:`config.common.matcher.v3.MatchPredicate <envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate>`, *REQUIRED*) The list of rules that make up the set.
  
  



.. _envoy_v3_api_msg_config.common.matcher.v3.HttpHeadersMatch:

config.common.matcher.v3.HttpHeadersMatch
-----------------------------------------

`[config.common.matcher.v3.HttpHeadersMatch proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/config/common/matcher/v3/matcher.proto#L66>`_

HTTP headers match configuration.

.. code-block:: json

  {
    "headers": []
  }

.. _envoy_v3_api_field_config.common.matcher.v3.HttpHeadersMatch.headers:

headers
  (:ref:`config.route.v3.HeaderMatcher <envoy_v3_api_msg_config.route.v3.HeaderMatcher>`) HTTP headers to match.
  
  


.. _envoy_v3_api_msg_config.common.matcher.v3.HttpGenericBodyMatch:

config.common.matcher.v3.HttpGenericBodyMatch
---------------------------------------------

`[config.common.matcher.v3.HttpGenericBodyMatch proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/config/common/matcher/v3/matcher.proto#L81>`_

HTTP generic body match configuration.
List of text strings and hex strings to be located in HTTP body.
All specified strings must be found in the HTTP body for positive match.
The search may be limited to specified number of bytes from the body start.

.. attention::

  Searching for patterns in HTTP body is potentially cpu intensive. For each specified pattern, http body is scanned byte by byte to find a match.
  If multiple patterns are specified, the process is repeated for each pattern. If location of a pattern is known, ``bytes_limit`` should be specified
  to scan only part of the http body.

.. code-block:: json

  {
    "bytes_limit": "...",
    "patterns": []
  }

.. _envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.bytes_limit:

bytes_limit
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Limits search to specified number of bytes - default zero (no limit - match entire captured buffer).
  
  
.. _envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.patterns:

patterns
  (:ref:`config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch>`, *REQUIRED*) List of patterns to match.
  
  
.. _envoy_v3_api_msg_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch:

config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch
--------------------------------------------------------------

`[config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/config/common/matcher/v3/matcher.proto#L82>`_


.. code-block:: json

  {
    "string_match": "...",
    "binary_match": "..."
  }

.. _envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.string_match:

string_match
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Text string to be located in HTTP body.
  
  
  
  Precisely one of :ref:`string_match <envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.string_match>`, :ref:`binary_match <envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.binary_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.binary_match:

binary_match
  (`bytes <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Sequence of bytes to be located in HTTP body.
  
  
  
  Precisely one of :ref:`string_match <envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.string_match>`, :ref:`binary_match <envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.binary_match>` must be set.
  


